--- a/main/res/layout/activity_main.xml
+++ b/main/res/layout/activity_main.xml
@@ -11,19 +11,10 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Launch Transparent"
-        android:id="@+id/button"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:onClick="launchTrans"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="launch Service"
         android:id="@+id/button2"
-        android:layout_below="@+id/button"
         android:layout_centerHorizontal="true"
+        android:alpha="0"
         android:onClick="launchService"/>
 
 </RelativeLayout>
